Added Logical Operators

--- a/Data-Structures/index.html
+++ b/Data-Structures/index.html
@@ -36,6 +36,9 @@
     <h1>Data Structures and Modern Operators</h1>
     <!-- <script src="1_destructuring_arrays.js"></script> -->
     <!-- <script src="2_destructuring_objects.js"></script> -->
-    <script src="3_spread_operator.js"></script>
+    <!-- <script src="3_spread_operator.js"></script> -->
+    <!-- <script src="4_rest_pattern.js"></script> -->
+    <!-- <script src="5_short_circuiting.js"></script> -->
+    <script src="6_logical_assignment_operators.js"></script>
   </body>
 </html>
