Addded COding Challenge

--- a/Data-Structures/index.html
+++ b/Data-Structures/index.html
@@ -39,6 +39,8 @@
     <!-- <script src="3_spread_operator.js"></script> -->
     <!-- <script src="4_rest_pattern.js"></script> -->
     <!-- <script src="5_short_circuiting.js"></script> -->
-    <script src="6_logical_assignment_operators.js"></script>
+    <!-- <script src="6_logical_assignment_operators.js"></script> -->
+    <script src="7_coding_challenge.js"></script>
+
   </body>
 </html>
