Added New Scripts

--- a/Data-Structures/index.html
+++ b/Data-Structures/index.html
@@ -40,7 +40,11 @@
     <!-- <script src="4_rest_pattern.js"></script> -->
     <!-- <script src="5_short_circuiting.js"></script> -->
     <!-- <script src="6_logical_assignment_operators.js"></script> -->
-    <script src="7_coding_challenge.js"></script>
+    <!-- <script src="7_coding_challenge.js"></script> -->
+    <!-- <script src="8_for_of_loop.js"></script> -->
+    <!-- <script src="9_enhaced_object_literals.js"></script> -->
+    <!-- <script src="10_optional_chaining.js"></script> -->
+    <script src="11_looping_objects_keys_values_entries.js"></script>
 
   </body>
 </html>
