Added new for Maps

--- a/Data-Structures/index.html
+++ b/Data-Structures/index.html
@@ -44,7 +44,9 @@
     <!-- <script src="8_for_of_loop.js"></script> -->
     <!-- <script src="9_enhaced_object_literals.js"></script> -->
     <!-- <script src="10_optional_chaining.js"></script> -->
-    <script src="11_looping_objects_keys_values_entries.js"></script>
+    <!-- <script src="11_looping_objects_keys_values_entries.js"></script> -->
+    <!-- <script src="12_coding_challenge.js"></script> -->
+    <script src="13_sets_maps.js"></script>
 
   </body>
 </html>
