--- a/Data-Structures/index.html
+++ b/Data-Structures/index.html
@@ -47,7 +47,7 @@
     <!-- <script src="11_looping_objects_keys_values_entries.js"></script> -->
     <!-- <script src="12_coding_challenge.js"></script> -->
     <!-- <script src="13_sets_maps.js"></script> -->
-    <script src="14_coding_challenge.js"></script>
+    <script src="15_strings_part1.js"></script>
 
   </body>
 </html>
