Added New Challenge

--- a/Data-Structures/index.html
+++ b/Data-Structures/index.html
@@ -48,7 +48,8 @@
     <!-- <script src="12_coding_challenge.js"></script> -->
     <!-- <script src="13_sets_maps.js"></script> -->
     <!-- <script src="15_strings_part1.js"></script> -->
-    <script src="16_coding_challenge.js"></script>
+    <!-- <script src="16_coding_challenge.js"></script> -->
+    <script src="17_string_practice.js"></script>
 
   </body>
 </html>
