--- a/Focus-On_Functions/index.html
+++ b/Focus-On_Functions/index.html
@@ -42,6 +42,7 @@
     <button class="poll">Answer poll ⁉️</button>
     <!-- <script src="1_default_parameters.js"></script> -->
     <!-- <script src="2_coding_challenge.js"></script> -->
-    <script src="3_closures.js"></script>
+    <!-- <script src="3_closures.js"></script> -->
+    <script src="4_coding_challenge.js"></script>
   </body>
 </html>
